@@ -1,3 +1,6 @@
+2020-01-15  Franz Holzinger  <franz@ttproducts.de>
+    * remove unnecessary parts of the template. This extension is only for the search form and not the list.
+
 2020-01-11  Franz Holzinger  <franz@ttproducts.de>
     * add the Resources from Indexed Search TYPO3 8.7.27
     * renew the configuration: setup.txt lib.macina_searchbox
